Organized html and css files for collaborators

--- a/index.html
+++ b/index.html
@@ -19,5 +19,15 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <!-- Start Landing section -->
+    <div class="landing" id="landing"></div>
+    <!-- End landing section -->
+    <!-- Start Products section -->
+    <div class="products" id="products"></div>
+    <!-- End Products section -->
+    <!-- Start Our History section -->
+    <div class="history" id="history"></div>
+    <!-- End Our History section -->
+  </body>
 </html>
