Finished designing top static part in landing section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="Styles/normalize.css" />
     <!-- Font awesome library -->
     <link rel="stylesheet" href="Styles/all.min.css" />
+    <script
+      src="https://kit.fontawesome.com/0c45307f92.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -21,7 +25,38 @@
   </head>
   <body>
     <!-- Start Landing section -->
-    <div class="landing" id="landing"></div>
+    <div class="landing" id="landing">
+      <div class="top-section">
+        <div class="container">
+          <div class="left">
+            <div class="hotline child">
+              <i class="fa fa-headphones"></i>
+              <p>Hotline : 1200 111 20 15</p>
+            </div>
+            <div class="mail child">
+              <i class="fa fa-regular fa-envelope"></i>
+              <p>Email : creativewithjoy@gmail.com</p>
+            </div>
+          </div>
+          <div class="right">
+            <div class="location child">
+              <i class="fa-solid fa-location-dot"></i>
+              <p>Store Location</p>
+              <i class="fa fa-solid fa-square-caret-down"></i>
+            </div>
+            <div class="order child">
+              <i class="fa fa-solid fa-location-crosshairs"></i>
+              <p>Track Your Order</p>
+            </div>
+            <div class="currency child">
+              <i class="fa-solid fa-dollar-sign"></i>
+              <p>USD</p>
+              <i class="fa fa-solid fa-square-caret-down"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- End landing section -->
     <!-- Start Products section -->
     <div class="products" id="products"></div>
