--- a/index.html
+++ b/index.html
@@ -59,7 +59,12 @@
     </div>
     <!-- End landing section -->
     <!-- Start Products section -->
-    <div class="products" id="products"></div>
+    <div class="products" id="products">
+      <div>
+        Test
+      </div>
+    </div>
+
     <!-- End Products section -->
     <!-- Start Our History section -->
     <div class="history" id="history"></div>
