--- a/index.html
+++ b/index.html
@@ -59,12 +59,127 @@
     </div>
     <!-- End landing section -->
     <!-- Start Products section -->
-    <div class="products" id="products">
-      <div>
-        Test
-      </div>
-    </div>
 
+    <!-- Welcome -->
+<div class="welcome-section">
+	<h5>Welcome to</h5>
+	<h3>The Home of Interior HandMade</h3> <img src="/Assets/arrow.png" alt="">
+	<h4>We are passionate about exotic indoor plants, we know them and always endeavor to precondition them so that you do not have many of the problems so often associated with indoor plants, after all we have a stock of thousands of plants and we have to know how to care for them.</h4>
+	<p><strong>JAME BRACE</strong> - Architecture Designer</p>
+</div>
+<!-- Services -->
+<div class="services">
+	<div class="services-card return"> <img class="services-icons" src="/Assets/return.png" alt="">
+		<div class="services-text">
+			<h3>FREE RETURN</h3>
+			<p>30 days money back guarantee!</p>
+		</div>
+	</div>
+	<div class="services-card delivery"> <img class="services-icons" src="/Assets/shipping.png" alt="">
+		<div class="services-text">
+			<h3>FREE SHIPPING</h3>
+			<p>A free shipping is available for orders more than $59.</p>
+		</div>
+	</div>
+	<div class="services-card call"> <img class="services-icons" src="/Assets/call.png" alt="">
+		<div class="services-text">
+			<h3>+(1111) 9666 1123</h3>
+			<p>Support 24/07</p>
+		</div>
+	</div>
+</div>
+  <!-- Services Ends-->  
+
+
+  <!-- Product Card Start -->
+<div class="product-card-container">
+<!-- p1 -->
+<div class="product-card">
+	<div class="product-image-card">
+		<div class="favourite"> <i class="fa-regular fa-heart"></i> </div>
+		<div class="promo-tag promo-drop">
+			<p class="promo-text">-5%</p>
+		</div> <img class="product-image" src="/Assets/sample-1.jpg" alt=""> </div>
+	<div class="product-info">
+		<h2 class="product-category">Furniture</h2>
+		<h3 class="product-name">Patchwork armchair, chair, modern designer</h3> </div>
+	<div class="ratings"> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-regular fa-star-half-stroke"></i> <i class="fa-regular fa-star"></i> </div>
+	<div class="product-price">
+		<p class="price strikethrough">$154.00</p>
+		<p class="price">$122.00</p>
+	</div>
+	<button class="add-to-cart-btn"><i class="fa-solid fa-bag-shopping"></i> Add to Cart</button>
+</div>
+<!-- p2 -->
+<div class="product-card">
+	<div class="product-image-card">
+		<div class="favourite"> <i class="fa-regular fa-heart"></i> </div>
+		<div class="promo-tag promo-drop">
+			<p class="promo-text">-5%</p>
+		</div> <img class="product-image" src="/Assets/sample-2.jpg" alt=""> </div>
+	<div class="product-info">
+		<h2 class="product-category">Furniture</h2>
+		<h3 class="product-name">Patchwork armchair, chair, modern designer</h3> </div>
+	<div class="ratings"> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-regular fa-star-half-stroke"></i> <i class="fa-regular fa-star"></i> </div>
+	<div class="product-price">
+		<p class="price strikethrough">$154.00</p>
+		<p class="price">$122.00</p>
+	</div>
+	<button class="add-to-cart-btn"><i class="fa-solid fa-bag-shopping"></i> Add to Cart</button>
+</div>
+<!-- p3 -->
+<div class="product-card">
+	<div class="product-image-card">
+		<div class="favourite"> <i class="fa-regular fa-heart"></i> </div>
+		<div class="promo-tag promo-drop">
+			<p class="promo-text">-30%</p>
+		</div> <img class="product-image" src="/Assets/sample-5.jpg" alt=""> </div>
+	<div class="product-info">
+		<h2 class="product-category">Furniture</h2>
+		<h3 class="product-name">Patchwork armchair, chair, modern designer</h3> </div>
+	<div class="ratings"> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-regular fa-star-half-stroke"></i> <i class="fa-regular fa-star"></i> </div>
+	<div class="product-price">
+		<p class="price strikethrough">$154.00</p>
+		<p class="price">$122.00</p>
+	</div>
+	<button class="add-to-cart-btn"><i class="fa-solid fa-bag-shopping"></i> Add to Cart</button>
+</div>
+<!-- p4 -->
+<div class="product-card">
+	<div class="product-image-card">
+		<div class="favourite"> <i class="fa-regular fa-heart"></i> </div>
+		<div class="promo-tag promo-drop">
+			<p class="promo-text">-5%</p>
+		</div> <img class="product-image" src="/Assets/sample-4.jpg" alt=""> </div>
+	<div class="product-info">
+		<h2 class="product-category">Furniture</h2>
+		<h3 class="product-name">Patchwork armchair, chair, modern designer</h3> </div>
+	<div class="ratings"> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-regular fa-star-half-stroke"></i> <i class="fa-regular fa-star"></i> </div>
+	<div class="product-price">
+		<!-- <p class="price strikethrough">$154.00</p> -->
+		<p class="price">$122.00</p>
+	</div>
+	<button class="add-to-cart-btn"><i class="fa-solid fa-bag-shopping"></i> Add to Cart</button>
+</div>
+<!-- p5 -->
+<div class="product-card">
+	<div class="product-image-card">
+		<div class="favourite"> <i class="fa-regular fa-heart"></i> </div>
+		<div class="promo-tag">
+			<p class="promo-text">NEW</p>
+		</div> <img class="product-image" src="/Assets/sample-2.jpg" alt=""> </div>
+	<div class="product-info">
+		<h2 class="product-category">Furniture</h2>
+		<h3 class="product-name">Patchwork armchair, chair, modern designer</h3> </div>
+	<div class="ratings"> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-regular fa-star-half-stroke"></i> <i class="fa-regular fa-star"></i> </div>
+	<div class="product-price">
+		<p class="price strikethrough">$154.00</p>
+		<p class="price">$122.00</p>
+	</div>
+	<button class="add-to-cart-btn"><i class="fa-solid fa-bag-shopping"></i> Add to Cart</button>
+</div>
+</div>
+<!-- Product Card End -->
     <!-- End Products section -->
     <!-- Start Our History section -->
     <div class="history" id="history"></div>
