Finished the landing section the the nav

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="location child">
               <i class="fa-solid fa-location-dot"></i>
               <p>Store Location</p>
-              <i class="fa fa-solid fa-square-caret-down"></i>
+              <i class="arrow arrowdown"></i>
             </div>
             <div class="order child">
               <i class="fa fa-solid fa-location-crosshairs"></i>
@@ -51,9 +51,76 @@
             <div class="currency child">
               <i class="fa-solid fa-dollar-sign"></i>
               <p>USD</p>
-              <i class="fa fa-solid fa-square-caret-down"></i>
+              <i class="arrow arrowdown"></i>
             </div>
           </div>
+        </div>
+      </div>
+      <div class="promotion-banner">
+        <div class="container">
+          <img src="Assets/logo.png" alt="" />
+          <div class="search">
+            <div class="dropdown">
+              All categories<i class="arrow arrowdown"></i>
+            </div>
+            <input type="text" placeholder="Search for products..." />
+
+            <div class="searchBtn">Search</div>
+          </div>
+
+          <div class="cart info">
+            <i class="fa-solid fa-cart-shopping"></i>
+            <p>Your cart<br /><span class="lightgray">0 items</span> -$0.00</p>
+          </div>
+          <div class="acc info">
+            <i class="fa-solid fa-user"></i>
+            <p>Register<br /><span class="lightgray">or</span> Sign in</p>
+          </div>
+        </div>
+      </div>
+      <div class="divider">
+        <div class="container">
+          <div class="categories">
+            <p>SHOP BY CATEGORIES</p>
+            <i class="fa-solid fa-bars"></i>
+          </div>
+          <div class="categories-items">
+            <p>Trending products</p>
+            <p>Today Deals</p>
+            <p>Gift cards & registry</p>
+            <p>Blog</p>
+            <p>Contact</p>
+          </div>
+        </div>
+      </div>
+      <div class="slider-products">
+        <div class="container">
+          <div class="slider">
+            <ul>
+              <li><i class="fa-solid fa-gamepad"></i></i> Movies, music & Games<i class="arrow arrowright"></i></li>
+              <li><i class="fa-solid fa-computer"></i> Computers & Office<i class="arrow arrowright"></i></li>
+              <li><i class="fa-solid fa-house"></i></i> Home, Garden Tools<i class="arrow arrowright"></i></li>
+              <li><i class="fa-sharp fa-solid fa-notes-medical"></i> Beauty & Health<i class="arrow arrowright"></i></li>
+              <li>
+                <i class="fa-solid fa-shirt"></i> Clothing & Shoes
+				<i class="arrow arrowright"></i></li>
+              <li><i class="fa-solid fa-phone"></i> Phones & Accessories<i class="arrow arrowright"></i></li>
+              <li><i class="fa-solid fa-house"></i> Sports & Outdoors<i class="arrow arrowright"></i></li>
+              <li><i class="fa-solid fa-gift"></i> Handmade gift<i class="arrow arrowright"></i></li>
+              <li><i class="fa-solid fa-camera"></i> Camera & Camcorders<i class="arrow arrowright"></i></li>
+              <li><i class="fa-solid fa-screwdriver-wrench"></i> Construction Tools<i class="arrow arrowright"></i></li>
+              <li><i class="fa-solid fa-car-side"></i> Car Electronics & GPS<i class="arrow arrowright"></i></li>
+              <li><i class="fa-solid fa-ellipsis"></i> All categories<i class="arrow arrowright"></i></li>
+            </ul>
+          </div>
+          <div class="product-view">
+
+			  <p>Furniture collections</p>
+			  <h1>SOFT WOODEN CHAIR</h1>
+			  <p>Soft wooden chair designed with premium leather<br> and red stetching is including in the sear</p>
+			  <p>Only : <span class="price">$62.99</span></p>
+			  <div class="btn">BUY NOW</div>
+		  </div>
         </div>
       </div>
     </div>
@@ -61,125 +128,193 @@
     <!-- Start Products section -->
 
     <!-- Welcome -->
-<div class="welcome-section">
-	<h5>Welcome to</h5>
-	<h3>The Home of Interior HandMade</h3> <img src="/Assets/arrow.png" alt="">
-	<h4>We are passionate about exotic indoor plants, we know them and always endeavor to precondition them so that you do not have many of the problems so often associated with indoor plants, after all we have a stock of thousands of plants and we have to know how to care for them.</h4>
-	<p><strong>JAME BRACE</strong> - Architecture Designer</p>
-</div>
-<!-- Services -->
-<div class="services">
-	<div class="services-card return"> <img class="services-icons" src="/Assets/return.png" alt="">
-		<div class="services-text">
-			<h3>FREE RETURN</h3>
-			<p>30 days money back guarantee!</p>
-		</div>
-	</div>
-	<div class="services-card delivery"> <img class="services-icons" src="/Assets/shipping.png" alt="">
-		<div class="services-text">
-			<h3>FREE SHIPPING</h3>
-			<p>A free shipping is available for orders more than $59.</p>
-		</div>
-	</div>
-	<div class="services-card call"> <img class="services-icons" src="/Assets/call.png" alt="">
-		<div class="services-text">
-			<h3>+(1111) 9666 1123</h3>
-			<p>Support 24/07</p>
-		</div>
-	</div>
-</div>
-  <!-- Services Ends-->  
+    <div class="welcome-section">
+      <h5>Welcome to</h5>
+      <h3>The Home of Interior HandMade</h3>
+      <img src="/Assets/arrow.png" alt="" />
+      <h4>
+        We are passionate about exotic indoor plants, we know them and always
+        endeavor to precondition them so that you do not have many of the
+        problems so often associated with indoor plants, after all we have a
+        stock of thousands of plants and we have to know how to care for them.
+      </h4>
+      <p><strong>JAME BRACE</strong> - Architecture Designer</p>
+    </div>
+    <!-- Services -->
+    <div class="services">
+      <div class="services-card return">
+        <img class="services-icons" src="/Assets/return.png" alt="" />
+        <div class="services-text">
+          <h3>FREE RETURN</h3>
+          <p>30 days money back guarantee!</p>
+        </div>
+      </div>
+      <div class="services-card delivery">
+        <img class="services-icons" src="/Assets/shipping.png" alt="" />
+        <div class="services-text">
+          <h3>FREE SHIPPING</h3>
+          <p>A free shipping is available for orders more than $59.</p>
+        </div>
+      </div>
+      <div class="services-card call">
+        <img class="services-icons" src="/Assets/call.png" alt="" />
+        <div class="services-text">
+          <h3>+(1111) 9666 1123</h3>
+          <p>Support 24/07</p>
+        </div>
+      </div>
+    </div>
+    <!-- Services Ends-->
 
-
-  <!-- Product Card Start -->
-<div class="product-card-container">
-<!-- p1 -->
-<div class="product-card">
-	<div class="product-image-card">
-		<div class="favourite"> <i class="fa-regular fa-heart"></i> </div>
-		<div class="promo-tag promo-drop">
-			<p class="promo-text">-5%</p>
-		</div> <img class="product-image" src="/Assets/sample-1.jpg" alt=""> </div>
-	<div class="product-info">
-		<h2 class="product-category">Furniture</h2>
-		<h3 class="product-name">Patchwork armchair, chair, modern designer</h3> </div>
-	<div class="ratings"> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-regular fa-star-half-stroke"></i> <i class="fa-regular fa-star"></i> </div>
-	<div class="product-price">
-		<p class="price strikethrough">$154.00</p>
-		<p class="price">$122.00</p>
-	</div>
-	<button class="add-to-cart-btn"><i class="fa-solid fa-bag-shopping"></i> Add to Cart</button>
-</div>
-<!-- p2 -->
-<div class="product-card">
-	<div class="product-image-card">
-		<div class="favourite"> <i class="fa-regular fa-heart"></i> </div>
-		<div class="promo-tag promo-drop">
-			<p class="promo-text">-5%</p>
-		</div> <img class="product-image" src="/Assets/sample-2.jpg" alt=""> </div>
-	<div class="product-info">
-		<h2 class="product-category">Furniture</h2>
-		<h3 class="product-name">Patchwork armchair, chair, modern designer</h3> </div>
-	<div class="ratings"> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-regular fa-star-half-stroke"></i> <i class="fa-regular fa-star"></i> </div>
-	<div class="product-price">
-		<p class="price strikethrough">$154.00</p>
-		<p class="price">$122.00</p>
-	</div>
-	<button class="add-to-cart-btn"><i class="fa-solid fa-bag-shopping"></i> Add to Cart</button>
-</div>
-<!-- p3 -->
-<div class="product-card">
-	<div class="product-image-card">
-		<div class="favourite"> <i class="fa-regular fa-heart"></i> </div>
-		<div class="promo-tag promo-drop">
-			<p class="promo-text">-30%</p>
-		</div> <img class="product-image" src="/Assets/sample-5.jpg" alt=""> </div>
-	<div class="product-info">
-		<h2 class="product-category">Furniture</h2>
-		<h3 class="product-name">Patchwork armchair, chair, modern designer</h3> </div>
-	<div class="ratings"> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-regular fa-star-half-stroke"></i> <i class="fa-regular fa-star"></i> </div>
-	<div class="product-price">
-		<p class="price strikethrough">$154.00</p>
-		<p class="price">$122.00</p>
-	</div>
-	<button class="add-to-cart-btn"><i class="fa-solid fa-bag-shopping"></i> Add to Cart</button>
-</div>
-<!-- p4 -->
-<div class="product-card">
-	<div class="product-image-card">
-		<div class="favourite"> <i class="fa-regular fa-heart"></i> </div>
-		<div class="promo-tag promo-drop">
-			<p class="promo-text">-5%</p>
-		</div> <img class="product-image" src="/Assets/sample-4.jpg" alt=""> </div>
-	<div class="product-info">
-		<h2 class="product-category">Furniture</h2>
-		<h3 class="product-name">Patchwork armchair, chair, modern designer</h3> </div>
-	<div class="ratings"> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-regular fa-star-half-stroke"></i> <i class="fa-regular fa-star"></i> </div>
-	<div class="product-price">
-		<!-- <p class="price strikethrough">$154.00</p> -->
-		<p class="price">$122.00</p>
-	</div>
-	<button class="add-to-cart-btn"><i class="fa-solid fa-bag-shopping"></i> Add to Cart</button>
-</div>
-<!-- p5 -->
-<div class="product-card">
-	<div class="product-image-card">
-		<div class="favourite"> <i class="fa-regular fa-heart"></i> </div>
-		<div class="promo-tag">
-			<p class="promo-text">NEW</p>
-		</div> <img class="product-image" src="/Assets/sample-2.jpg" alt=""> </div>
-	<div class="product-info">
-		<h2 class="product-category">Furniture</h2>
-		<h3 class="product-name">Patchwork armchair, chair, modern designer</h3> </div>
-	<div class="ratings"> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-regular fa-star-half-stroke"></i> <i class="fa-regular fa-star"></i> </div>
-	<div class="product-price">
-		<p class="price strikethrough">$154.00</p>
-		<p class="price">$122.00</p>
-	</div>
-	<button class="add-to-cart-btn"><i class="fa-solid fa-bag-shopping"></i> Add to Cart</button>
-</div>
-</div>
-<!-- Product Card End -->
+    <!-- Product Card Start -->
+    <div class="product-card-container">
+      <!-- p1 -->
+      <div class="product-card">
+        <div class="product-image-card">
+          <div class="favourite"><i class="fa-regular fa-heart"></i></div>
+          <div class="promo-tag promo-drop">
+            <p class="promo-text">-5%</p>
+          </div>
+          <img class="product-image" src="/Assets/sample-1.jpg" alt="" />
+        </div>
+        <div class="product-info">
+          <h2 class="product-category">Furniture</h2>
+          <h3 class="product-name">
+            Patchwork armchair, chair, modern designer
+          </h3>
+        </div>
+        <div class="ratings">
+          <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-regular fa-star-half-stroke"></i>
+          <i class="fa-regular fa-star"></i>
+        </div>
+        <div class="product-price">
+          <p class="price strikethrough">$154.00</p>
+          <p class="price">$122.00</p>
+        </div>
+        <button class="add-to-cart-btn">
+          <i class="fa-solid fa-bag-shopping"></i> Add to Cart
+        </button>
+      </div>
+      <!-- p2 -->
+      <div class="product-card">
+        <div class="product-image-card">
+          <div class="favourite"><i class="fa-regular fa-heart"></i></div>
+          <div class="promo-tag promo-drop">
+            <p class="promo-text">-5%</p>
+          </div>
+          <img class="product-image" src="/Assets/sample-2.jpg" alt="" />
+        </div>
+        <div class="product-info">
+          <h2 class="product-category">Furniture</h2>
+          <h3 class="product-name">
+            Patchwork armchair, chair, modern designer
+          </h3>
+        </div>
+        <div class="ratings">
+          <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-regular fa-star-half-stroke"></i>
+          <i class="fa-regular fa-star"></i>
+        </div>
+        <div class="product-price">
+          <p class="price strikethrough">$154.00</p>
+          <p class="price">$122.00</p>
+        </div>
+        <button class="add-to-cart-btn">
+          <i class="fa-solid fa-bag-shopping"></i> Add to Cart
+        </button>
+      </div>
+      <!-- p3 -->
+      <div class="product-card">
+        <div class="product-image-card">
+          <div class="favourite"><i class="fa-regular fa-heart"></i></div>
+          <div class="promo-tag promo-drop">
+            <p class="promo-text">-30%</p>
+          </div>
+          <img class="product-image" src="/Assets/sample-5.jpg" alt="" />
+        </div>
+        <div class="product-info">
+          <h2 class="product-category">Furniture</h2>
+          <h3 class="product-name">
+            Patchwork armchair, chair, modern designer
+          </h3>
+        </div>
+        <div class="ratings">
+          <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-regular fa-star-half-stroke"></i>
+          <i class="fa-regular fa-star"></i>
+        </div>
+        <div class="product-price">
+          <p class="price strikethrough">$154.00</p>
+          <p class="price">$122.00</p>
+        </div>
+        <button class="add-to-cart-btn">
+          <i class="fa-solid fa-bag-shopping"></i> Add to Cart
+        </button>
+      </div>
+      <!-- p4 -->
+      <div class="product-card">
+        <div class="product-image-card">
+          <div class="favourite"><i class="fa-regular fa-heart"></i></div>
+          <div class="promo-tag promo-drop">
+            <p class="promo-text">-5%</p>
+          </div>
+          <img class="product-image" src="/Assets/sample-4.jpg" alt="" />
+        </div>
+        <div class="product-info">
+          <h2 class="product-category">Furniture</h2>
+          <h3 class="product-name">
+            Patchwork armchair, chair, modern designer
+          </h3>
+        </div>
+        <div class="ratings">
+          <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-regular fa-star-half-stroke"></i>
+          <i class="fa-regular fa-star"></i>
+        </div>
+        <div class="product-price">
+          <!-- <p class="price strikethrough">$154.00</p> -->
+          <p class="price">$122.00</p>
+        </div>
+        <button class="add-to-cart-btn">
+          <i class="fa-solid fa-bag-shopping"></i> Add to Cart
+        </button>
+      </div>
+      <!-- p5 -->
+      <div class="product-card">
+        <div class="product-image-card">
+          <div class="favourite"><i class="fa-regular fa-heart"></i></div>
+          <div class="promo-tag">
+            <p class="promo-text">NEW</p>
+          </div>
+          <img class="product-image" src="/Assets/sample-2.jpg" alt="" />
+        </div>
+        <div class="product-info">
+          <h2 class="product-category">Furniture</h2>
+          <h3 class="product-name">
+            Patchwork armchair, chair, modern designer
+          </h3>
+        </div>
+        <div class="ratings">
+          <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-regular fa-star-half-stroke"></i>
+          <i class="fa-regular fa-star"></i>
+        </div>
+        <div class="product-price">
+          <p class="price strikethrough">$154.00</p>
+          <p class="price">$122.00</p>
+        </div>
+        <button class="add-to-cart-btn">
+          <i class="fa-solid fa-bag-shopping"></i> Add to Cart
+        </button>
+      </div>
+    </div>
+    <!-- Product Card End -->
     <!-- End Products section -->
     <!-- Start Our History section -->
     <div class="history" id="history"></div>
