Modified some margins in landing section, added categories menu functionality

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <!-- Normalize file -->
     <link rel="stylesheet" href="Styles/normalize.css" />
     <!-- Font awesome library -->
-    <link rel="stylesheet" href="Styles/all.min.css" />
     <script
       src="https://kit.fontawesome.com/0c45307f92.js"
       crossorigin="anonymous"
@@ -22,6 +21,8 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
+    <!-- JS File-->
+    <script defer src="Javascript/main.js"></script>
   </head>
   <body>
     <!-- Start Landing section -->
@@ -82,7 +83,7 @@
         <div class="container">
           <div class="categories">
             <p>SHOP BY CATEGORIES</p>
-            <i class="fa-solid fa-bars"></i>
+            <i class="fa-solid fa-bars cat-menu"></i>
           </div>
           <div class="categories-items">
             <p>Trending products</p>
