Made the search dropdown working correctly

--- a/index.html
+++ b/index.html
@@ -61,9 +61,22 @@
         <div class="container">
           <img src="Assets/logo.png" alt="" />
           <div class="search">
-            <div class="dropdown">
-              All categories<i class="arrow arrowdown"></i>
+            <div class="select">
+              <select name="categories" id="categogies">
+                <option value="volvo">All categories</option>
+                <option value="volvo">Movies, music & Games</option>
+                <option value="saab">Computers & Office</option>
+                <option value="mercedes">Home, Garden tools</option>
+                <option value="audi">Clothing & Shoes</option>
+                <option value="audi">Phones & Accessories</option>
+                <option value="audi">Sports & Outdoors</option>
+                <option value="audi">Handmade gift</option>
+                <option value="audi">Camera & Camcorders</option>
+                <option value="audi">Construction Tools</option>
+                <option value="audi">Car Electronics & GPS</option>
+              </select>
             </div>
+           
             <input type="text" placeholder="Search for products..." />
 
             <div class="searchBtn">Search</div>
