--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           <div class="categories-items">
             <p>Trending products</p>
             <p>Today Deals</p>
-            <p>Gift cards & registry</p>
+            <p>Gift cards</p>
             <p>Blog</p>
             <p>Contact</p>
           </div>
