Changed linked assets to imgbb link

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </div>
       <div class="promotion-banner">
         <div class="container">
-          <img src="Assets/logo.png" alt="" />
+          <img src="https://i.ibb.co/jLf3xWJ/logo.png" alt="" />
           <div class="search">
             <div class="select">
               <select name="categories" id="categogies">
@@ -145,7 +145,7 @@
     <div class="welcome-section">
       <h5>Welcome to</h5>
       <h3>The Home of Interior HandMade</h3>
-      <img src="/Assets/arrow.png" alt="" />
+      <img src="https://i.ibb.co/bgzHZXR/arrow.png" alt="" />
       <h4>
         We are passionate about exotic indoor plants, we know them and always
         endeavor to precondition them so that you do not have many of the
@@ -157,21 +157,21 @@
     <!-- Services -->
     <div class="services">
       <div class="services-card return">
-        <img class="services-icons" src="/Assets/return.png" alt="" />
+        <img class="services-icons" src="https://i.ibb.co/Z6ZxGMP/return.png" alt="" />
         <div class="services-text">
           <h3>FREE RETURN</h3>
           <p>30 days money back guarantee!</p>
         </div>
       </div>
       <div class="services-card delivery">
-        <img class="services-icons" src="/Assets/shipping.png" alt="" />
+        <img class="services-icons" src="https://i.ibb.co/VQxH98D/shipping.png" alt="" />
         <div class="services-text">
           <h3>FREE SHIPPING</h3>
           <p>A free shipping is available for orders more than $59.</p>
         </div>
       </div>
       <div class="services-card call">
-        <img class="services-icons" src="/Assets/call.png" alt="" />
+        <img class="services-icons" src="https://i.ibb.co/9nr7pC2/call.png" alt="" />
         <div class="services-text">
           <h3>+(1111) 9666 1123</h3>
           <p>Support 24/07</p>
@@ -189,7 +189,7 @@
           <div class="promo-tag promo-drop">
             <p class="promo-text">-5%</p>
           </div>
-          <img class="product-image" src="/Assets/sample-1.jpg" alt="" />
+          <img class="product-image" src="https://i.ibb.co/NTWyJk2/sample-1.jpg" alt="" />
         </div>
         <div class="product-info">
           <h2 class="product-category">Furniture</h2>
@@ -218,7 +218,7 @@
           <div class="promo-tag promo-drop">
             <p class="promo-text">-5%</p>
           </div>
-          <img class="product-image" src="/Assets/sample-2.jpg" alt="" />
+          <img class="product-image" src="https://i.ibb.co/BydJ0cm/sample-2.jpg" alt="" />
         </div>
         <div class="product-info">
           <h2 class="product-category">Furniture</h2>
@@ -247,7 +247,7 @@
           <div class="promo-tag promo-drop">
             <p class="promo-text">-30%</p>
           </div>
-          <img class="product-image" src="/Assets/sample-5.jpg" alt="" />
+          <img class="product-image" src="https://i.ibb.co/Y7wQDCy/sample-5.jpg" alt="" />
         </div>
         <div class="product-info">
           <h2 class="product-category">Furniture</h2>
@@ -276,7 +276,7 @@
           <div class="promo-tag promo-drop">
             <p class="promo-text">-5%</p>
           </div>
-          <img class="product-image" src="/Assets/sample-4.jpg" alt="" />
+          <img class="product-image" src="https://i.ibb.co/VBPGzhc/sample-4.jpg" alt="" />
         </div>
         <div class="product-info">
           <h2 class="product-category">Furniture</h2>
@@ -305,7 +305,7 @@
           <div class="promo-tag">
             <p class="promo-text">NEW</p>
           </div>
-          <img class="product-image" src="/Assets/sample-2.jpg" alt="" />
+          <img class="product-image" src="https://i.ibb.co/BydJ0cm/sample-2.jpg" alt="" />
         </div>
         <div class="product-info">
           <h2 class="product-category">Furniture</h2>
