Added history section

--- a/index.html
+++ b/index.html
@@ -331,7 +331,42 @@
     <!-- Product Card End -->
     <!-- End Products section -->
     <!-- Start Our History section -->
-    <div class="history" id="history"></div>
+    <div class="history" id="history">
+      <div class="container">
+        <div class="content">
+        <p>Our history</p>
+        <h1>About Xero Furniture Store</h1>
+        <p>We are passionate about exotic indoor plants, we know them and always endeavor to precondition them so that you do not have many of the problems.</p>
+      </div>
+      <div class="labels">
+        <div class="label">
+          <i class="fa-solid fa-circle"></i>
+          <img src="https://images.pexels.com/photos/2079249/pexels-photo-2079249.jpeg?auto=compress&cs=tinysrgb&w=500&h=500&dpr=2" alt="">
+          <div class="content">
+            <h1>1989 - Established</h1>
+            <p>Donec sed odio dui. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Vestibulum id ligula porta felis euismod semper.</p>
+          </div>
+        </div>
+        <div class="label">
+          <i class="fa-solid fa-circle"></i>
+          <img src="https://images.pexels.com/photos/2079249/pexels-photo-2079249.jpeg?auto=compress&cs=tinysrgb&w=500&h=500&dpr=2" alt="">
+          <div class="content">
+            <h1>1999 - Expanded Fields</h1>
+            <p>Donec sed odio dui. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Vestibulum id ligula porta felis euismod semper.</p>
+          </div>
+        </div>
+        <div class="label">
+          <i class="fa-solid fa-circle"></i>
+          <img src="https://images.pexels.com/photos/2079249/pexels-photo-2079249.jpeg?auto=compress&cs=tinysrgb&w=500&h=500&dpr=2" alt="">
+          <div class="content">
+            <h1>2009 - International Company</h1>
+            <p>Donec sed odio dui. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Vestibulum id ligula porta felis euismod semper.</p>
+          </div>
+        </div>
+      </div>
+      </div>
+      <img src="https://images.pexels.com/photos/2079249/pexels-photo-2079249.jpeg?auto=compress&cs=tinysrgb&w=1000&h=500&dpr=2" alt="">
+    </div>
     <!-- End Our History section -->
   </body>
 </html>
